--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
   </div>
 
   <div class="description">
+    Our mission is to accelerate the shift towards a sustainable food system.
+    <br><br>
+    We believe software and AI can help food biotech companies work with novel sustainable ingredients.
+    <br><br>
     We're building something game changing. Want to help shape it?
+    <br><br>
   </div>
 
-  <button onclick="showForm()">Get Started</button>
+  <button onclick="showForm()">Register Interest</button>
 
   <iframe
     id="notion-form" 
