--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>flint</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="file.svg" type="image/svg+xml">
 </head>
-<body>
-
   <div class="logo" style="display: flex; align-items: center;">
     <img src="file.svg" alt="Logo" style="margin-right: 0px;">
     <div class="logo-text">
