shrink logo to text, change description

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <link rel="icon" href="file.svg" type="image/svg+xml">
 </head>
   <div class="logo" style="display: flex; align-items: center;">
-    <img src="file.svg" alt="Logo" style="margin-right: 0px;">
+    <img src="file.svg" alt="Logo" style="margin-right: 0px; width: 90px; height: 90px;">
     <div class="logo-text">
       <p style="margin: 0;">flint</p>
     </div>
   </div>
 
   <div class="description">
-    Our mission is to accelerate the shift towards a sustainable food system.
+    The world needs smarter, cleaner, and radically more efficient food system.
     <br><br>
-    We believe software and AI can help food biotech companies work with novel sustainable ingredients.
+    By combining food science with AI, we help food biotech companies predict how new proteins and ingredients behave across formats, cooking methods, and sensory dimensions.
     <br><br>
-    We're building something game changing. Want to help shape it?
+    We're building something transformative. Want to help shape it?
     <br><br>
   </div>
 
