--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="description">
-    The world needs smarter, cleaner, and radically more efficient food system.
+    The world needs smarter, cleaner, and radically more efficient food systems.
     <br><br>
     By combining food science with AI, we help food biotech companies predict how new proteins and ingredients behave across formats, cooking methods, and sensory dimensions.
     <br><br>
