--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
   </div>
 
   <div class="description">
-    The world needs smarter, cleaner, and radically more efficient food systems.
+    The world needs food that nourishes people and the planet.
     <br><br>
-    By combining food science with AI, we help food biotech companies predict how new proteins and ingredients behave across formats, cooking methods, and sensory dimensions.
+    By combining nutrition, metabolomics, and food science with AI, flint helps food companies predict how their formulations behave inside the body — from glucose response to inflammation and beyond.
     <br><br>
-    We're building something transformative. Want to help shape it?
+    We’re building something transformative. 
+    <br><br>
+    Want to design the next generation of healthier foods?
     <br><br>
   </div>
 
-  <button onclick="showForm()">Register Interest</button>
+    <button onclick="showForm()">Be the first to know</button>
 
   <iframe
     id="notion-form" 
