--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <br><br>
   </div>
 
-    <button onclick="showForm()">Be the first to know</button>
+    <button onclick="showForm()">Request Early Access</button>
 
   <iframe
     id="notion-form" 
