--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <div class="logo" style="display: flex; align-items: center;">
     <img src="file.svg" alt="Logo" style="margin-right: 0px; width: 90px; height: 90px;">
     <div class="logo-text">
-      <p style="margin: 0;">flint</p>
+      <p style="margin: 0;">Flint</p>
     </div>
   </div>
 
   <div class="description">
     The world needs food that nourishes people and the planet.
     <br><br>
-    By combining nutrition, metabolomics, and food science with AI, flint helps food companies predict how their formulations behave inside the body — from glucose response to inflammation and beyond.
+    By combining nutrition, metabolomics, and food science with AI, Flint helps food companies predict how their formulations behave inside the body — from glucose response to inflammation and beyond.
     <br><br>
     We’re building something transformative. 
     <br><br>
