Update logo file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="file.svg" type="image/svg+xml">
 </head>
   <div class="logo" style="display: flex; align-items: center;">
-    <img src="file.svg" alt="Logo" style="margin-right: 0px; width: 90px; height: 90px;">
+    <img src="flintlogo_whitebackground.svg" alt="Logo" style="margin-right: 0px; width: 90px; height: 90px;">
     <div class="logo-text">
       <p style="margin: 0;">Flint</p>
     </div>
