removed style from html. talking now to css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="file.svg" type="image/svg+xml">
 </head>
   <div class="logo" style="display: flex; align-items: center;">
-    <img src="flintlogo_whitebackground.svg" alt="Logo" style="margin-right: 0px; width: 90px; height: 90px;">
+    <img src="flint-logo.png" alt="Flint logo" class="logo-img">
   </div>
 
   <div class="description">
