--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="description">
     The world needs food that nourishes people and the planet.
     <br><br>
-    By combining nutrition, metabolomics, and food science with AI, Flint helps food companies predict how their formulations behave inside the body — from glucose response to inflammation and beyond.
+    By combining nutrition, metabolomics, and food science with AI, Flint helps food companies predict how their formulations behave inside the body, from glucose response to inflammation and beyond.
     <br><br>
     We’re building something transformative. 
     <br><br>
